--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -16,6 +16,9 @@ nav a :hover {
     text-align: center;
     text-decoration: none;
 }
+#hero-msg h1, #hero-msg h4 {
+    text-align: center;
+}
 .book, .join {
     background-color: #2a7279;
 }
