--- a/HTML Practice/css/styles.css
+++ b/HTML Practice/css/styles.css
@@ -1,27 +1,31 @@
-body{
-    text-align: center;
-}
 nav{
     background-color: steelblue;
     padding: 10px;
+    text-align: center;
+    color: white;
 }
 a{
     color: white;
     margin: 40px;
+    font-size: 1.5em;
 }
 h1{
     color: steelblue;
+    text-align: center;
 }
 img{
-    width: 800px;
+    width: 80px;
     border: 4px solid steelblue;
+    width: 80%
 }
 p{
     padding: 10px;
+    width: 80%
 }
 footer{
     background-color: steelblue;
     color: white;
+    text-align: center;
 }
 .main-para{
     font-size: 1.5em;
@@ -30,4 +34,10 @@ footer{
 #active {
     background-color: white;
     color: steelblue;
+}
+main p {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+
 }
